--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,8 @@
 .card{
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
-    width: 40vh;
-    height: 40vh;
+    width: 50%;
+    height: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,7 +52,6 @@
     width: 200px;
     opacity: 1;
     font-size: medium;
-    
 }
 
 @media only screen and (max-width: 768px) {
